# whisper-android-lib

./: .gitignore  README.md  build_android.sh  build_jni.sh
.github/workflows/: build.yml
jni/: CMakeLists.txt  whisper_jni.cpp
